# keyoverlay-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  package.bat  settings.toml
build_scripts/windows/: build32.bat  build64.bat
daemon/: Cargo.toml  build.rs  settings.json  tray-build.rc
daemon/src/: error.rs  gui.rs  keyboard.rs  main.rs  server.rs  settings.rs  tray.rs
daemon/src/server/: websocket.rs
package/windows/: package_win32.bat  package_win64.bat
src/: delegates.rs  error.rs  gui.rs  helper.rs  keyboard.rs  main.rs  server.rs  settings.rs
src/delegates/: gui.rs  keyboard.rs  server.rs
static/default/: index.js  style.css
web/: index.html  index.js  style.css
web/bpm_counter/: index.html  index.js  style.css
web/default/: index.html  index.js  style.css
