[package]
name = "keyoverlay-rs"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
egui-keybinds = "1.2.4"

futures-util = "0.3.27"
lazy_static = "1.4.0"

poem = { version = "1.3.55", features = ["websocket", "static-files"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
open = "4.0.0"

toml = "0.7.3"
msgbox = "0.7.0"
serde = { version = "1.0.156", features = ["derive"] }
anyhow = "1.0.69"
futures = "0.3.27"


[features]
debug = []
