[package]
name = "keyoverlay-rs"
version = "4.5.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
native-dialog = "0.6.3"
egui-keybinds = "3.3.8"

# gui deps
eframe = "0.21.3"
egui = "0.21.0"

# server deps
poem = { version = "1.3.55", features = ["websocket", "static-files"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.27"
futures-util = "0.3.27"

# settings deps
serde = { version = "1.0.156", features = ["derive"] }
toml = "0.7.3"
const_format = "0.2.30"

# error deps
anyhow = "1.0.69"

# keyboard deps
rdev = "0.5.2"

[features]
