[package]
name = "keyoverlay_daemon"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix = "0.13.0"
actix-web-lab = "0.18.3"

device_query = "1.1.1"

config = "0.13.1"
array_tool = "1.0.3"
serde = "1.0.145"

msgbox = "0.7.0"
tray-item = "0.7.1"
open = "3.0.3"

lazy_static = "1.4.0"

simple-websockets = "0.1.4"
serde_json = "1.0.87"

[build-dependencies]
windres = "*"

[features]
console = []
