[package]
name = "keyoverlay-rs"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix = "0.13.0"
actix-web-lab = "0.18.3"

rdev = "0.5.2"

config = "0.13.1"
serde = "1.0.145"

msgbox = "0.7.0"
open = "3.0.3"
tray-item = "0.7.1"

lazy_static = "1.4.0"
anyhow = "1.0.66"

simple-websockets = "0.1.4"
serde_json = "1.0.87"
libappindicator = "0.7.1"

[target.'cfg(target_os="windows")'.build-dependencies]
windres = "0.2.2"

[target.'cfg(target_os="linux")'.build-dependencies]
libappindicator = "0.7.1"

[features]
console = []
debug = []
