[package]
name = "keyoverlay-rs"
version = "2.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix = "0.13.0"
actix-web-lab = "0.18.3"

rdev = "0.5.2"

config = "0.13.1"
serde = "1.0.145"

msgbox = "0.7.0"
open = "3.0.3"

lazy_static = "1.4.0"
anyhow = "1.0.66"

simple-websockets = "0.1.4"
serde_json = "1.0.87"

eframe = "0.19.0"
egui = "0.19.0"

[features]
console = []
debug = []
